2011-02-23  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c, common/gtk/theme.h, common/gtk/guimap.c,
	common/gtk/guimap.h, client/gtk/legend.c, client/gtk/quote-view.c,
	client/gtk/histogram.c: Move terrain drawing code to theme.

2011-02-21  Micah Bunting <Amnykon@gmail.com> and
        Roland Clobus <rclobus@rclobus.nl>
        * editor/gtk/editor.c, common/map.c, common/map.h: Resize the map with
        insert and remove at both ends.

2011-02-18  Micah Bunting <Amnykon@gmail.com>
	* common/map.c: Use new accessor functions.

2011-02-16  Micah Bunting <Amnykon@gmail.com>
	* common/map.c: Fixed infinite loop for large maps.

2011-02-15  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/gameover.c: Remove second log entry about winning.

2011-02-13  Roland Clobus <rclobus@rclobus.nl>
	* client/common/player.c: Translate the name of the additional points.

2011-02-05  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/identity.c: Use array for dice.

2011-02-05  Matt Zagrabelny <zagrabelny@users.sourceforge.net>
	* common/game.c, common/game.h, common/gtk/game-rules.c,
	common/gtk/game-rules.h: Added checkbox to enable experimental
	Cities and Knights expansion rules.
	* server/gtk/main.c: Store the value of the checkbox.
	* common/gtk/colors.c, common/gtk/colors.h, client/gtk/identity.c:
	Use colored dice for Cities and Knights.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 0.12.5.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* Released 0.12.4.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/gdk-pixbuf.loaders, MinGW/Makefile.am, pioneers.nsi.in,
	macros/type_socklen_t.m4, configure.ac, Makefile.am, README.MinGW:
	Fixed the MinGW port.
	* client/ai/lobbybot.c: Mention 0.12.4.
	* docs/README.release: Use the tag for the release build.

2011-01-23  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/data/themes/ccFlickr/Makefile.am: Fix typo in path.

2011-01-15  Roland Clobus <rclobus@rclobus.nl>